--- a/khitma/src/app/pages/group/group-dashboard/group-dashboard.component.html
+++ b/khitma/src/app/pages/group/group-dashboard/group-dashboard.component.html
@@ -179,6 +179,16 @@
 
 
 
+    <div *ngIf="!isAdmin">
+
+        <button style="color:darkred" mat-button class=" block" (click)="leaveGroup()">
+            ترك المجموعة </button>
+
+        <div class="spacer"></div>
+    </div>
+
+
+
     <div class="spacer"></div>
 
 
