--- a/khitma/src/app/app.component.html
+++ b/khitma/src/app/app.component.html
@@ -1,5 +1,5 @@
-<div fxLayout="row wrap" fxLayoutGap="16px grid" class="center-center">
-  <div fxFlex="33%" fxFlex.xs="100%" fxFlex.sm="100%">
+<div fxLayout="row wrap" fxLayoutGap="0px grid" class="center-center" style="height: 100%;">
+  <div fxFlex="33%" fxFlex.xs="100%" fxFlex.sm="100%" style="height: 100%; position: relative">
 
     <mat-toolbar color="primary">
       <button mat-icon-button>
