--- a/khitma/src/app/app.component.scss
+++ b/khitma/src/app/app.component.scss
@@ -136,7 +136,7 @@ section > p {
 }
 
 .mat-sidenav-container {
-  position: fixed !important;
+  position: absolute !important;
   height: 100%;
   min-height: 100%;
   width: 100%;
