--- a/khitma/src/app/pages/group/group-dashboard/group-dashboard.component.html
+++ b/khitma/src/app/pages/group/group-dashboard/group-dashboard.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="group">
+<div *ngIf="group" style="position: relative;">
 
 
 
@@ -184,7 +184,6 @@
         <button style="color:darkred" mat-button class=" block" (click)="leaveGroup()">
             ترك المجموعة </button>
 
-        <div class="spacer"></div>
     </div>
 
 
