better desktop style

--- a/khitma/src/app/app.component.html
+++ b/khitma/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div fxLayout="row wrap" fxLayoutGap="0px grid" class="center-center" style="height: 100%;">
-  <div fxFlex="33%" fxFlex.xs="100%" fxFlex.sm="100%" style="height: 100%; position: relative">
+  <div fxFlex="33%" fxFlex.xs="100%" fxFlex.sm="100%" style="height: 100%; position: relative; background: #fafafa;">
 
     <mat-toolbar color="primary">
       <button mat-icon-button>
@@ -9,7 +9,7 @@
 
       <!-- <small>- النسخة التجريبيّة</small>  -->
 
-      <span class="version">v0.8.9</span>
+      <span class="version">v0.9.0</span>
 
 
       <span class="spacer"></span>
