--- a/khitma/src/app/pages/about/about.component.html
+++ b/khitma/src/app/pages/about/about.component.html
@@ -31,8 +31,8 @@
 
 
     <ul class="links">
-        <li><a href="/assets/privacy_policy.html">اتفاقيّة الخصوصيّة</a></li>
-        <li><a href="/assets/terms_of_use.html">شروط الاستخدام</a></li>
+        <li><a href="/assets/privacy_policy.html" target="_blank">اتفاقيّة الخصوصيّة</a></li>
+        <li><a href="/assets/terms_of_use.html" target="_blank">شروط الاستخدام</a></li>
 
     </ul>
 
