--- a/khitma/src/app/pages/create-group/group-invite/group-invite.component.html
+++ b/khitma/src/app/pages/create-group/group-invite/group-invite.component.html
@@ -32,7 +32,8 @@
 
 
 
-    <a mat-raised-button color="accent" class="block  large action-btn" href="{{inviteLink}}">الانتقال لصفحة
+    <a mat-raised-button color="accent" class="block  large action-btn" [routerLink]="['/group',group.id]">الانتقال
+        لصفحة
         مجموعة الختمة</a>
 
 
