--- a/khitma/src/app/pages/home/home.component.html
+++ b/khitma/src/app/pages/home/home.component.html
@@ -20,7 +20,7 @@
 
     </p>
 
-    <a mat-raised-button color="accent" class="block large action-btn" href="/new">مجموعة جديدة</a>
+    <a mat-raised-button color="accent" class="block large action-btn" routerLink="/new">مجموعة جديدة</a>
 
 
 
@@ -33,7 +33,7 @@
     </section>
 
 
-    <a *ngIf="isShowArchive" mat-button class="block" href="me/groups/archive">أرشيف الختمات</a>
+    <a *ngIf="isShowArchive" mat-button class="block" routerLink="me/groups/archive">أرشيف الختمات</a>
 
 
 
