--- a/khitma/src/app/pages/me/dashboard/dashboard.component.html
+++ b/khitma/src/app/pages/me/dashboard/dashboard.component.html
@@ -9,4 +9,4 @@
 </ng-template>
 
 
-<a *ngIf="isShowArchive" mat-button class="block" href="/me/groups/archive">أرشيف الختمات</a>
+<a *ngIf="isShowArchive" mat-button class="block" routerLink="/me/groups/archive">أرشيف الختمات</a>
