--- a/khitma/src/app/shared/group-list/group-list-item/group-list-item.component.html
+++ b/khitma/src/app/shared/group-list/group-list-item/group-list-item.component.html
@@ -1,4 +1,4 @@
-<a href="{{link}}" class="group-list-item-link">
+<a [routerLink]="['group', group.id]" routerLink="{{link}}" class="group-list-item-link">
 
     <div class="group-list-item mat-elevation-z1">
 
