quran explorer + faster app + youtube ios fix?

--- a/khitma/src/app/app.component.html
+++ b/khitma/src/app/app.component.html
@@ -9,7 +9,7 @@
 
       <!-- <small>- النسخة التجريبيّة</small>  -->
 
-      <span class="version">v0.9.3</span>
+      <span class="version">v0.9.4</span>
 
 
       <span class="spacer"></span>
@@ -24,35 +24,25 @@
       <mat-sidenav #sidenav mode="push" style="width:50%">
         <mat-nav-list fxLayout="column" fxFlex>
 
-          <a mat-list-item routerLink="new"> <button mat-raised-button class="block action-btn">
-              <mat-icon>group</mat-icon> إنشاء مجموعة جديدة
-            </button> </a>
+          <a mat-list-item routerLink="new" (click)="sidenav.close()">
+            <button mat-raised-button class="block action-btn">
+              <mat-icon>group</mat-icon> مجموعة جديدة
+            </button>
+          </a>
 
 
           <mat-divider></mat-divider>
 
 
-          <a mat-list-item routerLink="me"> مجموعاتي</a>
-          <a mat-list-item target="_blank" href="https://app.quranflash.com/book/Medina1?ar#/reader"> المصحف الشريف </a>
-          <a mat-list-item routerLink="about"> عن ختمة.نت </a>
+          <a mat-list-item routerLink="me" (click)="sidenav.close()"> مجموعاتي</a>
+          <a mat-list-item routerLink="quran" (click)="sidenav.close()"> المصحف الشريف </a>
+          <a mat-list-item routerLink="about" (click)="sidenav.close()"> عن ختمة.نت </a>
 
           <mat-divider></mat-divider>
 
           <a mat-list-item *ngIf="!isPwaInstalled"> <button mat-raised-button class="block" (click)="installPwa()">
               <mat-icon>system_update</mat-icon> إضافة كتطبيق
             </button> </a>
-
-          <!-- <mat-divider></mat-divider>
-          <span fxFlex></span>
-
-          <mat-divider></mat-divider>
-
-          <a mat-list-item> <button *ngIf="!isPwaInstalled" mat-raised-button class="pwa-btn" (click)="installPwa()">
-              <mat-icon>system_update</mat-icon> إضافة كتطبيق
-            </button> </a>
-
-          <a mat-list-item [routerLink]="'/activities'"> شروط الاستخدام </a>
-          <a mat-list-item [routerLink]="'/create-activity'"> سياسة الخصوصيّة </a> -->
 
 
         </mat-nav-list>
