--- a/khitma/src/app/pages/about/about.component.html
+++ b/khitma/src/app/pages/about/about.component.html
@@ -18,9 +18,17 @@
         <p>في الفيديو التالي شرح وافٍ لكيفيّة استخدام ختمة.نت.</p>
 
 
-        <iframe width="100%" height="315" src="https://www.youtube.com/embed/MXh10UDyaA0" frameborder="0"
+        <!-- <iframe width="100%" height="315" src="https://www.youtube.com/embed/MXh10UDyaA0" frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen></iframe>
+            allowfullscreen></iframe> -->
+
+
+        <object width="100%" height="360">
+
+            <embed width="100%" height="360"
+                src="http://www.youtube.com/embed/MXh10UDyaA0?html5=1&amp;rel=0&amp;hl=en_US&amp;version=3"
+                class="youtube-player" type="text/html" allowscriptaccess="always" allowfullscreen="true" />
+        </object>
 
 
         <p> تقبل الله طاعاتكم ودمتم بحفظ الله تعالى ورعايته. </p>
