--- a/khitma/src/app/pages/about/about.component.html
+++ b/khitma/src/app/pages/about/about.component.html
@@ -23,12 +23,31 @@
             allowfullscreen></iframe> -->
 
 
-        <object width="100%" height="360">
+        <!-- <object width="100%" height="360">
 
             <embed width="100%" height="360"
                 src="http://www.youtube.com/embed/MXh10UDyaA0?html5=1&amp;rel=0&amp;hl=en_US&amp;version=3"
                 class="youtube-player" type="text/html" allowscriptaccess="always" allowfullscreen="true" />
-        </object>
+        </object> -->
+
+
+        <video width="100%" controls>
+            <source src="/assets/video-tutorial.mp4" type="video/mp4">
+
+            <a class="block" mat-raised-button color="primary"
+                href="https://www.youtube.com/watch?v=MXh10UDyaA0&ab_channel=DigitalUmmah" target="_blank">
+
+                <mat-icon>play_circle_filled</mat-icon>
+
+                فيديو الشرح على
+                يوتيوب
+            </a>
+
+        </video>
+
+
+
+
 
 
         <p> تقبل الله طاعاتكم ودمتم بحفظ الله تعالى ورعايته. </p>
