--- a/khitma/src/app/pages/about/about.component.html
+++ b/khitma/src/app/pages/about/about.component.html
@@ -32,7 +32,9 @@
 
 
         <video width="100%" controls>
-            <source src="/assets/video-tutorial.mp4" type="video/mp4">
+            <source
+                src="https://firebasestorage.googleapis.com/v0/b/quran-khitma.appspot.com/o/video-tutorial.mp4?alt=media&token=472b5588-e8c1-4c49-9deb-bed1a006efee"
+                type="video/mp4">
 
             <a class="block" mat-raised-button color="primary"
                 href="https://www.youtube.com/watch?v=MXh10UDyaA0&ab_channel=DigitalUmmah" target="_blank">
