--- a/khitma/src/app/pages/about/about.component.html
+++ b/khitma/src/app/pages/about/about.component.html
@@ -32,7 +32,7 @@
 
 
         <video width="100%" controls preload="auto">
-            <source src="http://dl.dropboxusercontent.com/s/5lgrptq0nmjthih/video-tutorial.mp4" type="video/mp4">
+            <source src="https://dl.dropboxusercontent.com/s/5lgrptq0nmjthih/video-tutorial.mp4" type="video/mp4">
 
             <a class="block" mat-raised-button color="primary"
                 href="https://www.youtube.com/watch?v=MXh10UDyaA0&ab_channel=DigitalUmmah" target="_blank">
