--- a/khitma/src/app/pages/about/about.component.html
+++ b/khitma/src/app/pages/about/about.component.html
@@ -1,7 +1,7 @@
 <div class="about">
     <label style="display:block;text-align: center;">﷽</label>
 
-    <img class="logo" src="assets/khitma-logo.png" />
+    <img class="logo" src="assets/khitma-logo.png" alt="logo of khitmah" />
     <p>
 
         <!-- يتيح ختمة.نت إنشاء وإدارة مجموعات لختم القرآن الكريم بشكل جماعي. حيث يمكن بسهولة إنشاء مجموعة ختمة جديدة ثمّ
@@ -18,20 +18,22 @@
         <p>في الفيديو التالي شرح وافٍ لكيفيّة استخدام ختمة.نت.</p>
 
 
-        <!-- <iframe width="100%" height="315" src="https://www.youtube.com/embed/MXh10UDyaA0" frameborder="0"
+        <iframe width="100%" height="315" src="https://www.youtube.com/embed/MXh10UDyaA0" frameborder="0"
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen></iframe> -->
+            allowfullscreen></iframe>
 
 
-        <!-- <object width="100%" height="360">
+        <a class="block" mat-raised-button color="primary" style="background-color: #c4302b;"
+            href="https://www.youtube.com/watch?v=MXh10UDyaA0&ab_channel=DigitalUmmah" target="_blank">
 
-            <embed width="100%" height="360"
-                src="http://www.youtube.com/embed/MXh10UDyaA0?html5=1&amp;rel=0&amp;hl=en_US&amp;version=3"
-                class="youtube-player" type="text/html" allowscriptaccess="always" allowfullscreen="true" />
-        </object> -->
+            <mat-icon>play_circle_filled</mat-icon>
+
+            فيديو الشرح على
+            يوتيوب
+        </a>
 
 
-        <video width="100%" controls preload="auto">
+        <!-- <video width="100%" controls preload="auto">
             <source src="/assets/video-tutorial.mp4" type="video/mp4">
 
             <a class="block" mat-raised-button color="primary"
@@ -43,7 +45,7 @@
                 يوتيوب
             </a>
 
-        </video>
+        </video> -->
 
 
 
