--- a/khitma/src/app/pages/home/home.component.html
+++ b/khitma/src/app/pages/home/home.component.html
@@ -2,7 +2,7 @@
 
     <label style="display:block;text-align: center;">﷽</label>
 
-    <img class="logo" src="assets/khitma-logo.png" />
+    <img class="logo" src="assets/khitma-logo.png" alt="logo of khitmah" />
     <p>
 
         <!-- يتيح ختمة.نت إنشاء وإدارة مجموعات لختم القرآن الكريم بشكل جماعي. حيث يمكن بسهولة إنشاء مجموعة ختمة جديدة ثمّ
