--- a/khitma/src/app/app.component.html
+++ b/khitma/src/app/app.component.html
@@ -21,7 +21,9 @@
     </mat-toolbar>
 
     <mat-sidenav-container>
-      <mat-sidenav #sidenav mode="push" style="width:50%">
+
+
+      <mat-sidenav #sidenav mode="over" style="width:50%">
         <mat-nav-list fxLayout="column" fxFlex>
 
           <a mat-list-item routerLink="new" (click)="sidenav.close()">
@@ -37,6 +39,7 @@
           <a mat-list-item routerLink="about" (click)="sidenav.close()"> عن ختمة.نت </a>
 
           <mat-divider></mat-divider>
+
           <!-- 
           <a mat-list-item *ngIf="!isPwaInstalled"> <button mat-raised-button class="block" (click)="installPwa()">
               <mat-icon>system_update</mat-icon> إضافة كتطبيق
