--- a/khitma/src/app/app.component.scss
+++ b/khitma/src/app/app.component.scss
@@ -147,3 +147,8 @@ section > p {
   width: 100%;
   padding: 0;
 }
+
+.mat-drawer-container {
+  overflow: visible;
+  position: unset !important;
+}
