--- a/khitma/src/app/app.component.html
+++ b/khitma/src/app/app.component.html
@@ -22,8 +22,8 @@
 
     <mat-sidenav-container>
 
-
-      <mat-sidenav #sidenav mode="push" style="width:50%">
+      <!-- push -->
+      <mat-sidenav #sidenav mode="over" style="width:50%">
         <mat-nav-list fxLayout="column" fxFlex>
 
           <a mat-list-item routerLink="/" (click)="sidenav.close()"> ختمة.نت</a>
