--- a/khitma/src/app/app.component.scss
+++ b/khitma/src/app/app.component.scss
@@ -37,14 +37,18 @@ textarea {
 
 section {
   margin: 32px 0;
+}
 
-  > header {
-    text-align: center;
-    font-size: 150%;
-    font-weight: bold;
-    margin-bottom: 32px;
-    // margin-bottom: -16px;
-  }
+section:first-child {
+  margin-top: 0;
+}
+
+section > header {
+  text-align: center;
+  font-size: 150%;
+  font-weight: bold;
+  margin-bottom: 32px;
+  // margin-bottom: -16px;
 }
 
 mat-toolbar {
@@ -106,7 +110,23 @@ a.large {
   justify-content: center;
 }
 
+$toolbar-height: 56px;
+
+mat-toolbar {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  height: $toolbar-height;
+}
+
 .content {
+  position: absolute;
+  top: $toolbar-height;
+  bottom: 0;
+  left: 0;
+  right: 0;
+
   padding: 32px;
   padding-bottom: 64px;
   // display: flex;
@@ -115,6 +135,7 @@ a.large {
   overflow-x: hidden;
   // overflow-y: scroll;
   background: transparent;
+  background-color: white;
 }
 
 .spacer {
@@ -151,4 +172,10 @@ section > p {
 .mat-drawer-container {
   overflow: visible;
   position: unset !important;
+}
+
+#app-container {
+  position: relative;
+  height: 100%;
+  background: white;
 }
