group links fix

--- a/khitma/src/app/pages/group/group-dashboard/group-dashboard.component.html
+++ b/khitma/src/app/pages/group/group-dashboard/group-dashboard.component.html
@@ -155,7 +155,7 @@
                     <a [routerLink]="['/quran/juz' , myJuzIndex + 1]">
                         <mat-icon class="quran-explorer-btn" [matBadge]="myJuzIndex + 1" matBadgeSize="large"
                             matBadgePosition="below ">
-                            auto_stories</mat-icon>
+                            menu_book</mat-icon>
                     </a>
                 </div>
 
