--- a/khitma/src/app/pages/group/group-dashboard/group-dashboard.component.scss
+++ b/khitma/src/app/pages/group/group-dashboard/group-dashboard.component.scss
@@ -136,7 +136,7 @@
   // clip-path: circle(71.8% at 50% 17%);
 
   .admin-section {
-    margin: 0 0 16px 0;
+    margin: 0;
     opacity: 0.5;
     padding: 10px;
   }
