--- a/khitma/src/app/pages/home/home.component.html
+++ b/khitma/src/app/pages/home/home.component.html
@@ -3,6 +3,23 @@
     <label style="display:block;text-align: center;">﷽</label>
 
     <img class="logo" src="assets/khitma-logo.png" alt="logo of khitmah" />
+
+
+    <section *ngIf="groups">
+
+        <hr style="margin-bottom:32px" />
+
+        <app-group-list [groups]="groups" (onAction)="archiveGroup($event)"></app-group-list>
+
+
+    </section>
+
+    <a *ngIf="isShowArchive" mat-button class="block" routerLink="me/groups/archive">أرشيف الختمات</a>
+
+    <hr style="margin-bottom:32px" />
+
+
+
     <p>
 
         <!-- يتيح ختمة.نت إنشاء وإدارة مجموعات لختم القرآن الكريم بشكل جماعي. حيث يمكن بسهولة إنشاء مجموعة ختمة جديدة ثمّ
@@ -33,16 +50,6 @@
 
 
 
-
-    <!-- <section *ngIf="groups">
-
-        <app-group-list [groups]="groups" (onAction)="archiveGroup($event)"></app-group-list>
-
-
-    </section>
-
-
-    <a *ngIf="isShowArchive" mat-button class="block" routerLink="me/groups/archive">أرشيف الختمات</a> -->
 
 
 
