--- a/khitma/src/app/pages/me/personal-khitma/personal-khitma.component.html
+++ b/khitma/src/app/pages/me/personal-khitma/personal-khitma.component.html
@@ -6,6 +6,9 @@
     </header>
 
 
+    <p>يمكنك التبديل بين الحالات المختلفة للجزء عن طريق الضغط عليه. كذلك عند حجزك أو إتمام قراءتك لجزء في إحدى المجموعات
+        فإنّ حالة ذلك الجزء ستتعدّل بشكل تلقائي هنا في ختمتك الشخصيّة</p>
+
     <app-juz-grid class="app-juz-grid" [ajza]="ajza" (onJuzSelection)="juzSelected($event)">
     </app-juz-grid>
 
