--- a/khitma/src/app/pages/group/group-dashboard/group-dashboard.component.scss
+++ b/khitma/src/app/pages/group/group-dashboard/group-dashboard.component.scss
@@ -193,3 +193,13 @@
     margin: 8px auto;
   }
 }
+
+.current-task {
+}
+
+.group-container {
+  > * {
+    display: block;
+    margin: 32px auto;
+  }
+}
