--- a/khitma/src/app/pages/home/home.component.html
+++ b/khitma/src/app/pages/home/home.component.html
@@ -1,6 +1,9 @@
 <div class="home">
 
+
     <label style="display:block;text-align: center;">﷽</label>
+
+
 
     <img class="logo" src="assets/khitma-logo.png" alt="logo of khitmah" />
 
@@ -43,9 +46,11 @@
 
         <a mat-raised-button color="accent" class="block large action-btn" routerLink="/new">مجموعة جديدة</a>
 
-        <a mat-raised-button color="accent" class="block large action-btn" disabled="true">ختمة
+        <a routerLink="/ramadan" mat-raised-button color="accent" class="block large "
+            style="background-color: #011c2f;">ختمة
             رمضان العالميّة
-            (قريبا)</a>
+        </a>
+
     </div>
 
 
